# FORGE

./: .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  render.yaml  test-checkpoint-11.js  test-neo4j-connection.js  test-wallet.js
api/: .gitkeep  INSTALL.md  README.md  package.json  tsconfig.json
api/src/: index.ts
dashboard/: README.md  package.json  tailwind.config.ts
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/components/: AgentStatus.tsx  AuditTrail.tsx  (+6 more)
docs/: .gitkeep  API-KEYS-GUIDE.md  API.md  ARCHITECTURE.md  DEMO-FLOW-EXPLAINED.md  GCP-DEPLOYMENT-MINIMAL.md  GCP-DEPLOYMENT.md  INTEGRATIONS.md  IRONCLAW_SETUP.md  RENDER-DEPLOYMENT.md
ironclaw/: .gitkeep  Cargo.toml  Dockerfile  README.md  build-wasm.ps1  build-wasm.sh
ironclaw/tools/mock_wallet/: Cargo.toml
ironclaw/tools/mock_wallet/src/: lib.rs
mocks/: .gitkeep  modulate-responses.json  numeric-responses.json  senso-responses.json  tavily-responses.json  yutori-responses.json
neo4j/: .gitkeep  README.md  seed-runner.ts  seed.cypher  seed.sh  setup-aura.md
tests/: CHECKPOINT-11-CHECKLIST.md  CHECKPOINT-11-STATUS.md  TASK-26-COMPLETION-REPORT.md  checkpoint-11-integration-test.ts  checkpoint-15-manual.js  checkpoint-15-test.js  checkpoint-22-automated-simple.js  checkpoint-22-dashboard-test.js  checkpoint-22-manual-verification.md  final-validation-suite.js  manual-checkpoint-11.js  manual-checkpoint-11.sh  task-26-validation.js  test-agent-status-sse.js  test-agent-status-workflow.js  test-demo-controls.js  verify-deployment.js
(+51 files in other folders)
